--- a/docs/rules/class_equals.qmd
+++ b/docs/rules/class_equals.qmd
@@ -19,12 +19,16 @@ The same rationale applies to `class(...) %in% "some_class"`.
 
 ```{r}
 x <- lm(drat ~ mpg, mtcars)
+class(x) <- c("my_class", class(x))
+
 class(x) == "lm"
 ```
 
 Use instead:
 ```{r}
 x <- lm(drat ~ mpg, mtcars)
+class(x) <- c("my_class", class(x))
+
 inherits(x, "lm")
 ```
 
