docs: Various improvements

--- a/docs/rules.qmd
+++ b/docs/rules.qmd
@@ -6,11 +6,11 @@ title: Rules
 
 All rules belong to at least one category:
 
--   **correctness**: code that is outright wrong or useless.
--   **suspicious**: code that is most likely wrong or useless.
--   **performance**: code that can be written to run faster.
--   **readability**: code is correct but can be written in a way that is easier to read.
--   **testthat**: rules for the `testthat` package. Disabled by default.
+-   **correctness** (CORR): code that is outright wrong or useless.
+-   **suspicious** (SUSP): code that is most likely wrong or useless.
+-   **performance** (PERF): code that can be written to run faster.
+-   **readability** (READ): code is correct but can be written in a way that is easier to read.
+-   **testthat** (TESTTHAT): rules for the `testthat` package. Disabled by default.
 
 You can find the list of available rules below, and more detailed explanations and examples in pages in the sidebar.
 
