--- a/docs/rules.qmd
+++ b/docs/rules.qmd
@@ -57,6 +57,7 @@ dat <- as.data.frame(
     c("duplicated_arguments", "suspicious", "❌", ""),
     c("empty_assignment", "readability", "❌", ""),
     c("equals_na", "correctness", "✅", ""),
+    c("equals_null", "correctness", "✅", ""),
     c("expect_length", "testthat", "✅", "Disabled by default"),
     c("expect_named", "testthat", "✅", "Disabled by default"),
     c("expect_not", "testthat", "✅", "Disabled by default"),
